--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,9 @@ FONTSIZE = 20
 
 [FRACTAL]
 DELAY = 0
-ITERATIONS = 6
+LOW_ITERATIONS = 3
+HIGH_ITERATIONS = 8
 SIDES = 3  # This value should not be changed
 SIZE = 500
 RANDOM = 1
+RANDOM_FACTOR = 0.1
