Reduced point count by excluding initial triangle

--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,16 @@
 [DISPLAY]
 WIDTH = 1200
 HEIGHT = 800
-FOREGROUND =  [255, 255, 255]
-BACKGROUND =  [0, 0, 0]
+HIGH_FORE = [0, 0, 0]
+# HIGH_FORE = [125, 176, 223]
+LOW_FORE = [247, 167, 71]
+BACKGROUND =  [255, 255, 255]
 FONTSIZE = 16
 
 [FRACTAL]
 DELAY = 0
-LOW_ITERATIONS = 2
 HIGH_ITERATIONS = 6
 SIDES = 3  # This value should not be changed
 SIZE = 500
 RANDOM = 1
-RANDOM_FACTOR = 0.16
+
