Langtons ant first commit

--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,6 @@
 [DISPLAY]
-WIDTH = 1200
-HEIGHT = 800
-HIGH_FORE = [0, 0, 0]
-# HIGH_FORE = [125, 176, 223]
-LOW_FORE = [247, 167, 71]
-BACKGROUND =  [255, 255, 255]
-FONTSIZE = 16
-
-[FRACTAL]
-DELAY = 0
-HIGH_ITERATIONS = 6
-SIDES = 3  # This value should not be changed
-SIZE = 500
-RANDOM = 1
+WIDTH = 2000
+HEIGHT = 1750
+ROWS = 400
+COLUMNS = 340
 
